--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -11,7 +11,7 @@ const title = "Nosotros - Conecta Internacional";
       <div class="container text-center position-relative z-2">
         <h1 class="display-4 fw-bold mb-4">Conecta Internacional</h1>
         <p class="lead mb-5">En Conecta Internacional, Contamos con una amplia red de contactos en estas áreas, lo que nos permite ayudarte a optimizar los servicios de tu empresa.</p>
-        <a href="#services" class="btn btn-primary btn-lg">Conocer más</a>
+        <a href="servicios" class="btn btn-primary btn-lg">Conocer más</a>
       </div>
     </section>
 
