--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,10 +18,10 @@ const currentYear = new Date().getFullYear();
       <div class="col-lg-3 col-md-6">
         <h3 class="text-white h5 mb-3">Enlaces</h3>
         <ul class="list-unstyled footer-links">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Servicios</a></li>
-          <li><a href="#">Nosotros</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="/">Inicio</a></li>
+          <li><a href="servicios">Servicios</a></li>
+          <li><a href="nosotros">Nosotros</a></li>
+          <li><a href="contacto">Contacto</a></li>
         </ul>
       </div>
 
@@ -29,10 +29,10 @@ const currentYear = new Date().getFullYear();
       <div class="col-lg-3 col-md-6">
         <h3 class="text-white h5 mb-3">Servicios</h3>
         <ul class="list-unstyled footer-links">
-          <li><a href="#">Búsqueda de Proveedores</a></li>
-          <li><a href="#">Búsqueda de Transportes</a></li>
-          <li><a href="#">Asesoría en Internación</a></li>
-          <li><a href="#">Externalización</a></li>
+          <li><a href="servicios-busqueda-de-proveedores">Búsqueda de Proveedores</a></li>
+          <li><a href="servicios-busqueda-de-transportes">Búsqueda de Transportes</a></li>
+          <li><a href="servicios-asesoria-de-internacion">Asesoría en Internación</a></li>
+          <li><a href="servicios-de-externalizacion">Externalización</a></li>
         </ul>
       </div>
 
